Trabajo clase subir las fotos y funciones de eliminar y editar

--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,3 +1,11 @@
-<h2>Editing</h2>
+<%= form_for @image do |f| %>
 
-<%= render 'form' %>
+<%= f.label :description %> <br>
+
+<%= f.text_field :description %>
+
+<br>
+
+<%= f.submit %>
+
+<% end %>
