--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,5 +1,39 @@
-<p>
-    <strong><%= image.id %></strong><br>
-    <%= image.description %><br>
-    <%= link_to 'Edit', edit_image_path(image) %>
-</p>
+<div class="col">
+
+<figure class="figure">
+
+<%= image_tag image.picture.thumb.url, class: 'figure-img img-fluid rounded' %>
+
+<figcaption class="figure-caption">
+
+<%= image.description %>
+
+<%= link_to 'Editar', edit_image_path(image) %>
+
+<%= link_to 'Eliminar', image, method: :delete, data:{
+
+confirm: 'Esta seguro que decea eliminar esta imagen.'
+
+} %>
+
+</figcaption>
+
+</figure>
+
+</div>
+
+<div class="form-group">
+
+<%= form_for @image do |f| %>
+
+<%= f.label :description %> <br>
+
+<%= f.text_field :description, class: 'form-control' %>
+
+<br>
+
+<%= f.submit 'Enviar', :class => 'btn btn-primary' %>
+
+<% end %>
+
+</div>
